--- a/DustLibraryManagementSystem/DustyLibraryManagementSystem.csproj
+++ b/DustLibraryManagementSystem/DustyLibraryManagementSystem.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.4" />
     <PackageReference Include="RavenDB.Client" Version="5.4.101" />
   </ItemGroup>
 
